@@ -84,7 +84,6 @@ extern void errorMsg(char *s, ...)
 
 	va_start(p, s);
 	fflush(stdout);
-	fprintf(stderr, "\n");
 	vfprintf(stderr, s, p);
 	fprintf(stderr, "\n");
 	va_end(p);
@@ -96,7 +95,6 @@ extern void fatalError(char *s, ...)
 
 	va_start(p, s);
 	fflush(stdout);
-	fprintf(stderr, "\n");
 	vfprintf(stderr, s, p);
 	fprintf(stderr, "\n");
 	va_end(p);
